--- a/ddpg_test.ipynb
+++ b/ddpg_test.ipynb
@@ -3515,6 +3515,103 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if __name__ == '__main__':\n",
+    "    env = gym.make(\"MountainCarContinuous-v0\")\n",
+    "    episode_reward_lst = []\n",
+    "    test_episode_reward_lst = []\n",
+    "    agent = Agent(2,1,train_batch_size = 128)\n",
+    "    agent.main_actor.model.summary()\n",
+    "    agent.main_critic.model.summary()\n",
+    "\n",
+    "    run_process(1000,double_mode=True, train=True,render = False, train_batch_size=128,verbose = False,reward_normalization=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import argparse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    parser = argparse.ArgumentParser('parameters')\n",
+    "\n",
+    "    parser.add_argument('--epochs', type=int, default=100, help='number of epochs, (default: 100)')\n",
+    "    parser.add_argument('--e', type=str, default='MountainCarContinuous-v0', help='environment name, (default: MountainCarContinuous-v0)')\n",
+    "    parser.add_argument('--d', type=bool, default=False, help='train and test alternately. (default : False)')\n",
+    "    parser.add_argument('--t', type=bool, default=True, help=\"True if training, False if test. (default: True)\")\n",
+    "    parser.add_argument('--r', type=bool, default=False, help='rendering the game environment. (default : False)')\n",
+    "    parser.add_argument('--b', type=int, default=128, help='train batch size. (default : 128)')\n",
+    "    parser.add_argument('--v', type=bool, default=False, help='verbose mode. (default : False)')\n",
+    "    parser.add_argument('--n', type=bool, default=True, help='reward normalization. (default : True)')\n",
+    "    \n",
+    "    args = parser.parse_args()\n",
+    "    configuration(args.e,args.b,args.epochs,args.d,args.t,args.r,args.v.args.n)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env = gym.make(\"MountainCarContinuous-v0\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def __name__== '__main__':\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def configuration(environment,batch_size,epochs,double_mode,train,render,verbose,reward_normalization):\n",
+    "    env = gym.make(environment)\n",
+    "    episode_reward_lst = []\n",
+    "    test_episode_reward_lst = []\n",
+    "    agent = Agent(env.observation_space.shape[0],env.action_space.shape[0],train_batch_size = batch_size)\n",
+    "    agent.main_actor.model.summary()\n",
+    "    agent.main_critic.model.summary()\n",
+    "\n",
+    "    run_process(epochs,double_mode=double_mode, train=train,render = render, train_batch_size=batch_size,\\\n",
+    "                verbose = verbose,reward_normalization=reward_normalization)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 71,
    "metadata": {},
    "outputs": [],
