--- a/ddpg_test.ipynb
+++ b/ddpg_test.ipynb
@@ -3556,10 +3556,9 @@
     "    parser.add_argument('--b', type=int, default=128, help='train batch size. (default : 128)')\n",
     "    parser.add_argument('--v', type=bool, default=False, help='verbose mode. (default : False)')\n",
     "    parser.add_argument('--n', type=bool, default=True, help='reward normalization. (default : True)')\n",
-    "    \n",
+    "    parser.add_argument('--sp', type=int, default=True, help='save point. epochs // sp. (default : 100)')\n",
     "    args = parser.parse_args()\n",
-    "    configuration(args.e,args.b,args.epochs,args.d,args.t,args.r,args.v.args.n)\n",
-    "    "
+    "    configuration(args.e,args.b,args.epochs,args.d,args.t,args.r,args.v,args.n)"
    ]
   },
   {
@@ -3598,16 +3597,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def configuration(environment,batch_size,epochs,double_mode,train,render,verbose,reward_normalization):\n",
+    "def configuration(environment,batch_size,epochs,double_mode,train,render,verbose,reward_normalization,save_point):\n",
+    "    global agent\n",
+    "    global env\n",
+    "    global episode_reward_lst\n",
+    "    global test_episode_reward_lst\n",
     "    env = gym.make(environment)\n",
     "    episode_reward_lst = []\n",
     "    test_episode_reward_lst = []\n",
     "    agent = Agent(env.observation_space.shape[0],env.action_space.shape[0],train_batch_size = batch_size)\n",
+    "    \n",
     "    agent.main_actor.model.summary()\n",
     "    agent.main_critic.model.summary()\n",
     "\n",
     "    run_process(epochs,double_mode=double_mode, train=train,render = render, train_batch_size=batch_size,\\\n",
-    "                verbose = verbose,reward_normalization=reward_normalization)"
+    "                verbose = verbose,reward_normalization=reward_normalization,save_point)"
    ]
   },
   {
@@ -3667,6 +3671,13 @@
    "source": [
     "env.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
