--- a/ddpg_test.ipynb
+++ b/ddpg_test.ipynb
@@ -64,15 +64,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_process(iteration, double_mode = False, train = True, render = False, train_batch_size = 128,verbose = False,reward_normalization = False):\n",
-    "    save_point = 1\n",
-    "    if train : \n",
-    "        save_point = iteration // 10\n",
+    "def run_process(iteration, double_mode = False, train = True, render = False,\\\n",
+    "                train_batch_size = 128,verbose = False,reward_normalization = False,save_point = 10):\n",
     "    for iterate in range(iteration):\n",
-    "        if train & (iterate % save_point == 0):\n",
+    "        if train & (iterate+1 % save_point == 0):\n",
     "            print('saved')\n",
     "            agent.main_critic.model.save_weights(\"./well_trained_main_critic_\"+str(iterate)+\".h5\")\n",
+    "            agent.target_critic.model.save_weights(\"./well_trained_target_critic_\"+str(iterate)+\".h5\")\n",
     "            agent.main_actor.model.save_weights(\"./well_trained_main_actor_\"+str(iterate)+\".h5\") \n",
+    "            agent.target_actor.model.save_weights(\"./well_trained_target_actor_\"+str(iterate)+\".h5\")\n",
     "        print('iterate : ',iterate)\n",
     "        if double_mode :\n",
     "            run_episode(train,render, train_batch_size, verbose, reward_normalization)\n",
@@ -3415,6 +3415,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
    "outputs": [],
@@ -3541,6 +3548,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5 % 10"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -3611,7 +3638,7 @@
     "    agent.main_critic.model.summary()\n",
     "\n",
     "    run_process(epochs,double_mode=double_mode, train=train,render = render, train_batch_size=batch_size,\\\n",
-    "                verbose = verbose,reward_normalization=reward_normalization,save_point)"
+    "                verbose = verbose,reward_normalization=reward_normalization,save_point=save_point)"
    ]
   },
   {
