save error fixed

--- a/ddpg_test.ipynb
+++ b/ddpg_test.ipynb
@@ -60,6 +60,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [],
@@ -67,18 +85,18 @@
     "def run_process(iteration, double_mode = False, train = True, render = False,\\\n",
     "                train_batch_size = 128,verbose = False,reward_normalization = False,save_point = 10):\n",
     "    for iterate in range(iteration):\n",
-    "        if train & (iterate+1 % save_point == 0):\n",
-    "            print('saved')\n",
-    "            agent.main_critic.model.save_weights(\"./well_trained_main_critic_\"+str(iterate)+\".h5\")\n",
-    "            agent.target_critic.model.save_weights(\"./well_trained_target_critic_\"+str(iterate)+\".h5\")\n",
-    "            agent.main_actor.model.save_weights(\"./well_trained_main_actor_\"+str(iterate)+\".h5\") \n",
-    "            agent.target_actor.model.save_weights(\"./well_trained_target_actor_\"+str(iterate)+\".h5\")\n",
     "        print('iterate : ',iterate)\n",
     "        if double_mode :\n",
     "            run_episode(train,render, train_batch_size, verbose, reward_normalization)\n",
     "            run_episode(False,render, train_batch_size, verbose, reward_normalization)\n",
     "        else:\n",
-    "            run_episode(train,render,train_batch_size,verbose,reward_normalization)"
+    "            run_episode(train,render,train_batch_size,verbose,reward_normalization)\n",
+    "        if train & (iterate+1 % save_point == 0):\n",
+    "            agent.main_critic.model.save_weights(\"./well_trained_main_critic_\"+str(iterate)+\".h5\")\n",
+    "            agent.target_critic.model.save_weights(\"./well_trained_target_critic_\"+str(iterate)+\".h5\")\n",
+    "            agent.main_actor.model.save_weights(\"./well_trained_main_actor_\"+str(iterate)+\".h5\") \n",
+    "            agent.target_actor.model.save_weights(\"./well_trained_target_actor_\"+str(iterate)+\".h5\")\n",
+    "            print('saved')"
    ]
   },
   {
