minor notatin fixed

--- a/ddpg_test.ipynb
+++ b/ddpg_test.ipynb
@@ -91,11 +91,11 @@
     "            run_episode(False,render, train_batch_size, verbose, reward_normalization)\n",
     "        else:\n",
     "            run_episode(train,render,train_batch_size,verbose,reward_normalization)\n",
-    "        if train & (iterate+1 % save_point == 0):\n",
-    "            agent.main_critic.model.save_weights(\"./well_trained_main_critic_\"+str(iterate)+\".h5\")\n",
-    "            agent.target_critic.model.save_weights(\"./well_trained_target_critic_\"+str(iterate)+\".h5\")\n",
-    "            agent.main_actor.model.save_weights(\"./well_trained_main_actor_\"+str(iterate)+\".h5\") \n",
-    "            agent.target_actor.model.save_weights(\"./well_trained_target_actor_\"+str(iterate)+\".h5\")\n",
+    "        if train & ((iterate+1) % save_point == 0):\n",
+    "            agent.main_critic.model.save_weights(\"./well_trained_main_critic_\"+str(iterate+1)+\".h5\")\n",
+    "            agent.target_critic.model.save_weights(\"./well_trained_target_critic_\"+str(iterate+1)+\".h5\")\n",
+    "            agent.main_actor.model.save_weights(\"./well_trained_main_actor_\"+str(iterate+1)+\".h5\") \n",
+    "            agent.target_actor.model.save_weights(\"./well_trained_target_actor_\"+str(iterate+1)+\".h5\")\n",
     "            print('saved')"
    ]
   },
