--- a/ddpg_test.ipynb
+++ b/ddpg_test.ipynb
@@ -9,9 +9,31 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ie-49\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
-      "Using TensorFlow backend.\n"
+      "Using TensorFlow backend.\n",
+      "C:\\Users\\ie-49\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:516: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
+      "C:\\Users\\ie-49\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:517: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
+      "C:\\Users\\ie-49\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:518: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
+      "C:\\Users\\ie-49\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:519: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
+      "C:\\Users\\ie-49\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:520: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
+      "C:\\Users\\ie-49\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:525: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
+      "C:\\Users\\ie-49\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:541: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
+      "C:\\Users\\ie-49\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:542: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
+      "C:\\Users\\ie-49\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:543: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
+      "C:\\Users\\ie-49\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:544: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
+      "C:\\Users\\ie-49\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:545: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
+      "C:\\Users\\ie-49\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:550: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n"
      ]
     }
    ],
@@ -53,32 +75,18 @@
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import gym\n",
-    "env = gym.make(\"MountainCarContinuous-v0\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,18 +157,14 @@
    "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "episode_reward_lst = []"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "test_episode_reward_lst = []"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -220,6 +224,8 @@
     }
    ],
    "source": [
+    "episode_reward_lst = []\n",
+    "test_episode_reward_lst = []\n",
     "agent = Agent(2,1,train_batch_size = 128)\n",
     "agent.main_actor.model.summary()\n",
     "agent.main_critic.model.summary()"
@@ -3456,26 +3462,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(500, 6)"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.cumsum(np.random.randn(500, 6), 0).shape"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 49,
    "metadata": {},
    "outputs": [],
@@ -3483,30 +3469,6 @@
     "ep = np.array(episode_reward_lst).reshape(-1,1)\n",
     "test_ep = np.array(test_episode_reward_lst).reshape(-1,1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-1.84410068e+01, -2.44356370e-02],\n",
-       "       [-1.79978053e+01, -1.65766746e-02],\n",
-       "       [ 8.38308203e+01, -2.66611386e-02],\n",
-       "       ...,\n",
-       "       [-7.22997900e+01, -9.95984117e+01],\n",
-       "       [ 8.19677385e+01, -9.95753811e+01],\n",
-       "       [ 4.47210209e+01, -9.96087736e+01]])"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -3543,17 +3505,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "if __name__ == '__main__':\n",
-    "    env = gym.make(\"MountainCarContinuous-v0\")\n",
-    "    episode_reward_lst = []\n",
-    "    test_episode_reward_lst = []\n",
-    "    agent = Agent(2,1,train_batch_size = 128)\n",
-    "    agent.main_actor.model.summary()\n",
-    "    agent.main_critic.model.summary()\n",
-    "\n",
-    "    run_process(1000,double_mode=True, train=True,render = False, train_batch_size=128,verbose = False,reward_normalization=True)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -3722,7 +3674,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'''\n",
+    "import gym\n",
+    "env = gym.make(\"MountainCarContinuous-v0\")\n",
+    "episode_reward_lst = []\n",
+    "test_episode_reward_lst = []\n",
+    "agent = Agent(2,1,train_batch_size = 128)\n",
+    "agent.main_actor.model.summary()\n",
+    "agent.main_critic.model.summary()\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    env = gym.make(\"MountainCarContinuous-v0\")\n",
+    "    episode_reward_lst = []\n",
+    "    test_episode_reward_lst = []\n",
+    "    agent = Agent(2,1,train_batch_size = 128)\n",
+    "    agent.main_actor.model.summary()\n",
+    "    agent.main_critic.model.summary()\n",
+    "\n",
+    "    run_process(1000,double_mode=True, train=True,render = False, train_batch_size=128,verbose = False,reward_normalization=True)\n",
+    "'''\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -3741,7 +3714,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
