--- a/ddpg_mountaincontinuouscar_real.ipynb
+++ b/ddpg_mountaincontinuouscar_real.ipynb
@@ -40,15 +40,8 @@
    "source": [
     "from gameagent import Agent\n",
     "import gym\n",
-    "from ounoise import OUNoise\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "action_size = 1\n",
-    "exploration_mu = 0\n",
-    "exploration_theta = 0.15\n",
-    "exploration_sigma = 0.25\n",
-    "noise = OUNoise(action_size, exploration_mu, exploration_theta, exploration_sigma)"
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
@@ -78,7 +71,7 @@
    "source": [
     "epsilon = 0.999\n",
     "epsilon_decaying = 0.99995\n",
-    "def run_episode(train = True, render = False, train_batch_size = 640,verbose = False,reward_normalization = False):\n",
+    "def run_episode(train = True, render = False, train_batch_size = 640,verbose = False):\n",
     "    global epsilon\n",
     "    global epsilon_decaying\n",
     "    epsilon *= epsilon_decaying\n",
@@ -24441,17 +24434,18 @@
     }
    ],
    "source": [
-    "for iterate in range(1,10001):\n",
-    "    print('iterate : ',iterate)\n",
-    "    if iterate % 5 == 0:\n",
-    "        run_episode(train = True, render = False, train_batch_size=640,verbose=False, reward_normalization= False)\n",
-    "    else:\n",
-    "        run_episode(train = False, render = False, train_batch_size=640,verbose=False, reward_normalization= False)\n",
-    "    if iterate % 1000 == 0:\n",
-    "        agent.main_critic.model.save_weights(\"./well_trained_main_critic_\"+str(iterate+1)+\".h5\")\n",
-    "        agent.target_critic.model.save_weights(\"./well_trained_target_critic_\"+str(iterate+1)+\".h5\")\n",
-    "        agent.main_actor.model.save_weights(\"./well_trained_main_actor_\"+str(iterate+1)+\".h5\") \n",
-    "        agent.target_actor.model.save_weights(\"./well_trained_target_actor_\"+str(iterate+1)+\".h5\")"
+    "def run_training(iteration,save_point):\n",
+    "    for iterate in range(1,iteration+1):\n",
+    "        print('iterate : ',iterate)\n",
+    "        if iterate % 5 == 0:\n",
+    "            run_episode(train = True, render = False, train_batch_size=640,verbose=False)\n",
+    "        else:\n",
+    "            run_episode(train = False, render = False, train_batch_size=640,verbose=False)\n",
+    "        if iterate % save_point == 0:\n",
+    "            agent.main_critic.model.save_weights(\"./well_trained_main_critic_\"+str(iterate+1)+\".h5\")\n",
+    "            agent.target_critic.model.save_weights(\"./well_trained_target_critic_\"+str(iterate+1)+\".h5\")\n",
+    "            agent.main_actor.model.save_weights(\"./well_trained_main_actor_\"+str(iterate+1)+\".h5\") \n",
+    "            agent.target_actor.model.save_weights(\"./well_trained_target_actor_\"+str(iterate+1)+\".h5\")"
    ]
   },
   {
@@ -25636,74 +25630,6 @@
     "%matplotlib inline\n",
     "plt.plot(episode_reward_lst)\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def run_process(iteration, double_mode = False, train = True, render = False,\\\n",
-    "                train_batch_size = 128,verbose = False,reward_normalization = False,save_point = 10):\n",
-    "    for iterate in range(iteration):\n",
-    "        print('iterate : ',iterate)\n",
-    "        if double_mode :\n",
-    "            run_episode(train,render, train_batch_size, verbose, reward_normalization)\n",
-    "            run_episode(False,render, train_batch_size, verbose, reward_normalization)\n",
-    "        else:\n",
-    "            run_episode(train,render,train_batch_size,verbose,reward_normalization)\n",
-    "        if train & ((iterate+1) % save_point == 0):\n",
-    "            agent.main_critic.model.save_weights(\"./well_trained_main_critic_\"+str(iterate+1)+\".h5\")\n",
-    "            agent.target_critic.model.save_weights(\"./well_trained_target_critic_\"+str(iterate+1)+\".h5\")\n",
-    "            agent.main_actor.model.save_weights(\"./well_trained_main_actor_\"+str(iterate+1)+\".h5\") \n",
-    "            agent.target_actor.model.save_weights(\"./well_trained_target_actor_\"+str(iterate+1)+\".h5\")\n",
-    "            print('saved')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def run_episode(train = True, render = False, train_batch_size = 128,verbose = False,reward_normalization = False):\n",
-    "    record = []\n",
-    "    done = False\n",
-    "    frame = env.reset()\n",
-    "    ep_reward = 0\n",
-    "    while done != True:\n",
-    "        if render:\n",
-    "            env.render()\n",
-    "        state = frame.reshape(1,-1)\n",
-    "        state = (state - env.observation_space.low) / \\\n",
-    "                (env.observation_space.high - env.observation_space.low)\n",
-    "\n",
-    "        action = agent.get_action(state)\n",
-    "        if train : \n",
-    "            action = np.clip((action +(noise.sample())), -1, 1)\n",
-    "        else :\n",
-    "            action = np.clip(action, -1,1)\n",
-    "        next_frame, reward, done, _ = env.step(action)\n",
-    "        record.append([state,action,reward,next_frame.reshape(1,-1),done])\n",
-    "        ep_reward += reward\n",
-    "        frame = next_frame\n",
-    "        if verbose :\n",
-    "            print('state : ', state, ', action :', action, ', reward : ',reward,', reward : ', reward,', done : ',done,\\\n",
-    "                ', ep_reward : ',ep_reward)\n",
-    "        if done & train :\n",
-    "            if reward_normalization : \n",
-    "                record = compute_discounted_R(record)\n",
-    "            list(map(lambda x : agent.memory.add(x[0],x[1],x[2],x[3],x[4]), record))\n",
-    "        if (len(agent.memory)>10000)& train:\n",
-    "            print('trained_start')\n",
-    "            agent.train()\n",
-    "            print('trained_well')\n",
-    "    print(\"ep_reward:\", ep_reward)\n",
-    "    if train:\n",
-    "        episode_reward_lst.append(ep_reward)\n",
-    "    else:\n",
-    "        test_episode_reward_lst.append(ep_reward)\n"
    ]
   },
   {
