--- a/ddpg_pendulum_test.ipynb
+++ b/ddpg_pendulum_test.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,9 +70,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Logging before flag parsing goes to stderr.\n",
+      "W0830 13:35:52.920258  9672 deprecation_wrapper.py:119] From C:\\Users\\ie-49\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:66: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "\n",
+      "W0830 13:35:52.946187  9672 deprecation_wrapper.py:119] From C:\\Users\\ie-49\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:541: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
+      "\n",
+      "W0830 13:35:52.951174  9672 deprecation_wrapper.py:119] From C:\\Users\\ie-49\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:4432: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
+      "\n",
+      "W0830 13:35:53.135682  9672 deprecation_wrapper.py:119] From C:\\Users\\ie-49\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:1033: The name tf.assign_add is deprecated. Please use tf.compat.v1.assign_add instead.\n",
+      "\n",
+      "W0830 13:35:53.275337  9672 deprecation_wrapper.py:119] From C:\\Users\\ie-49\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:1020: The name tf.assign is deprecated. Please use tf.compat.v1.assign instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "agent = Agent(3,1,train_batch_size = 128)\n",
     "max_len = 200"
@@ -80,7 +98,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"model_1\"\n",
+      "__________________________________________________________________________________________________\n",
+      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+      "==================================================================================================\n",
+      "input_1 (InputLayer)            (None, 3)            0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_1 (Dense)                 (None, 128)          512         input_1[0][0]                    \n",
+      "__________________________________________________________________________________________________\n",
+      "input_2 (InputLayer)            (None, 1)            0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_2 (Dense)                 (None, 256)          33024       dense_1[0][0]                    \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_3 (Dense)                 (None, 128)          256         input_2[0][0]                    \n",
+      "__________________________________________________________________________________________________\n",
+      "concatenate_1 (Concatenate)     (None, 384)          0           dense_2[0][0]                    \n",
+      "                                                                 dense_3[0][0]                    \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_4 (Dense)                 (None, 128)          49280       concatenate_1[0][0]              \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_5 (Dense)                 (None, 1)            129         dense_4[0][0]                    \n",
+      "==================================================================================================\n",
+      "Total params: 83,201\n",
+      "Trainable params: 83,201\n",
+      "Non-trainable params: 0\n",
+      "__________________________________________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "agent.main_critic.model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
