--- a/ddpg_mountaincontinuouscar_real.ipynb
+++ b/ddpg_mountaincontinuouscar_real.ipynb
@@ -3892,10 +3892,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"model_1\"\n",
+      "__________________________________________________________________________________________________\n",
+      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+      "==================================================================================================\n",
+      "input_1 (InputLayer)            (None, 2)            0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "batch_normalization_1 (BatchNor (None, 2)            8           input_1[0][0]                    \n",
+      "__________________________________________________________________________________________________\n",
+      "input_2 (InputLayer)            (None, 1)            0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_1 (Dense)                 (None, 128)          384         batch_normalization_1[0][0]      \n",
+      "__________________________________________________________________________________________________\n",
+      "batch_normalization_2 (BatchNor (None, 1)            4           input_2[0][0]                    \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_2 (Dense)                 (None, 256)          33024       dense_1[0][0]                    \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_3 (Dense)                 (None, 128)          256         batch_normalization_2[0][0]      \n",
+      "__________________________________________________________________________________________________\n",
+      "concatenate_1 (Concatenate)     (None, 384)          0           dense_2[0][0]                    \n",
+      "                                                                 dense_3[0][0]                    \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_4 (Dense)                 (None, 128)          49280       concatenate_1[0][0]              \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_5 (Dense)                 (None, 1)            129         dense_4[0][0]                    \n",
+      "==================================================================================================\n",
+      "Total params: 83,085\n",
+      "Trainable params: 83,079\n",
+      "Non-trainable params: 6\n",
+      "__________________________________________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "agent.main_critic.model.summary()"
+   ]
   }
  ],
  "metadata": {
